--- a/site/src/App.css
+++ b/site/src/App.css
@@ -62,11 +62,11 @@ a {
 }
 
 .section-wrap {
-  margin: 0 0 3rem 0;
+  margin: 0 0 4rem 0;
 }
 
 .section-header {
-  font-size: 1.35rem;
+  font-size: 1.5rem;
   font-weight: 500;
   margin: 0 0 2.25rem 0;
   text-align: center;
@@ -113,6 +113,14 @@ a {
   font-size: .9rem;
   font-style: italic;
   margin: 0 0 .5rem 0;
+  min-height: 20px;
+}
+
+.profile-subheader-small {
+  font-size: .8rem;
+  font-style: italic;
+  margin: 0 0 .5rem 0;
+  min-height: 20px;
 }
 
 .contact-wrap {
@@ -136,6 +144,13 @@ a {
 .linkedin-icon {
   width: 65%;
   margin: 0 0 0 1.15rem;
+  padding: 0;
+}
+
+
+.whatsapp-icon {
+  width: 95%;
+  margin: 0 0 0 .9rem;
   padding: 0;
 }
 
@@ -205,6 +220,11 @@ a {
   }
 
   .profile-subheader {
+    margin: 0 0 .25rem 0;
+  }
+
+  .profile-subheader-small {
+    font-size: .75rem;
     margin: 0 0 .25rem 0;
   }
 
